k8s-legacy/vs-users.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-vs
spec:
  hosts:
    - user-service # Внутри Mesh достаточно имени сервиса
  http:
    - route:
        - destination:
            host: user-service
            port:
              number: 8081
      timeout: 3s  # Заменяет read-timeout=3000ms
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: gateway-error,connect-failure,refused-stream
